--- a/css/index-mo/index-mo.scss
+++ b/css/index-mo/index-mo.scss
@@ -393,7 +393,7 @@
               letter-spacing: - 0.05rem;
               line-height: 130%;
               text-align: center;
-              color: #000
+              color: var(--black);
             }
           }
           .contact {
