--- a/css/index-pc/index-pc.scss
+++ b/css/index-pc/index-pc.scss
@@ -52,7 +52,7 @@
             a{
               font-size: 1.5625rem;   //25px
               font-weight: 700;
-              color: black;
+              color: var(--black);
               font-family: 'Outfit';
               font-style: normal;
               text-align: right;
@@ -84,7 +84,7 @@
             left: 0;
             width: 100%;
             height: 2px;
-            background-color: black;
+            background-color: var(--black);
             transition: all .3s;
             font-weight: 700;
             &:nth-child(1){
@@ -159,7 +159,7 @@
             height: 310px;  // img사이즈 높이가 345px
             display: flex;
             text-align: center;
-            color: black;
+            color: var(--black);
             animation: slide1 2s ease-in-out forwards;  // 슬라이드 애니메이션1
             .we {
               position: absolute;
@@ -194,7 +194,7 @@
               position: absolute;
               right: 0;   
               bottom: 0;
-              color: black;
+              color: var(--black);
               font-style: italic;
               font-family: 'Cormorant Garamond';
               font-size: 9rem;  //150px;
@@ -245,7 +245,7 @@
               position: absolute;
               right: 0;
               top: 0;
-              color: black;
+              color: var(--black);
               text-decoration: underline;
               text-decoration-thickness: 0;   // 선 두께
               text-underline-position: under;
@@ -284,7 +284,7 @@
           left: calc(50% - 1219px/2 + 135px);
           width: 950px;
           height: 150px;
-          color: black;
+          color: var(--black);
           display: flex;
           text-align: center;
           justify-content: center;
@@ -341,7 +341,7 @@
             font-weight: 300;
             font-size: 10.625rem;  //170px
             line-height: 242px;
-            color: black;
+            color: var(--black);
             letter-spacing: -0.5rem;
           }
           .sec3_gap {
@@ -406,7 +406,7 @@
             font-weight: 300;
             font-size: 10.625rem;
             // line-height: 242px;
-            color: black;
+            color: var(--black);
             letter-spacing: -0.5rem;
           }
         }
@@ -430,7 +430,7 @@
             font-weight: 300;
             font-size: 10.625rem;  //170px
             line-height: 242px;
-            color: black;
+            color: var(--black);
             letter-spacing: -0.5rem;
           }
           .sec4_gap {
@@ -462,7 +462,7 @@
                 font-weight: 500;
                 font-size: 2.8125rem;  //45px
                 line-height: 62px;
-                color: black;
+                color: var(--black);
               }
             }
             .sec4_text2 {
@@ -476,7 +476,7 @@
                 font-weight: 300;
                 font-size: 1.125rem;  //18px
                 line-height: 30px;
-                color: black;
+                color: var(--black);
               }
               .sec4_brace2 {
                 position: absolute;
@@ -494,7 +494,7 @@
             font-weight: 300;
             font-size: 10.625rem;   //170px
             // line-height: 242px;
-            color: black;
+            color: var(--black);
             letter-spacing: -0.5rem;
           }
         }
@@ -581,7 +581,7 @@
                 right: 0;
                 font-size: 11.875rem;  //190px
                 line-height: 260px;
-                color: black;
+                color: var(--black);
                 letter-spacing: -0.3rem;
               }
               h4 {
@@ -601,7 +601,7 @@
               bottom: 0;
               font-family: 'SUIT';
               font-style: normal;
-              color: black;
+              color: var(--black);
               h5 {
                 padding-bottom: 30px;
                 font-weight: 500;
@@ -636,7 +636,7 @@
             font-weight: 300;
             font-size: 11.25rem;  //180px
             // line-height: 242px;
-            color: black;
+            color: var(--black);
             justify-items: center;
             align-items: center;
             letter-spacing: -0.3rem;
@@ -681,7 +681,7 @@
             font-style: italic;
             font-weight: 300;
             font-size: 11.25rem;  //180px
-            color: black;
+            color: var(--black);
             letter-spacing: -0.3rem;
           }
         }
@@ -705,7 +705,7 @@
             font-weight: 300;
             font-size: 11.25rem;  //180px
             letter-spacing: -0.3rem;
-            color: black;
+            color: var(--black);
           }
           .sec7_gap {
             position: absolute;
@@ -733,7 +733,7 @@
               font-size: 2rem;    //32px;   
               line-height: 130%;
               text-align: center;
-              color: black
+              color: var(--black)
             }
             .mo_sec7_text {
               display: none;
@@ -754,7 +754,7 @@
             font-size: 8.125rem;  //130px
             line-height: 182px;
             letter-spacing: -0.3rem;
-            color: black;
+            color: var(--black);
           }
           .object {
             opacity: 0;
@@ -792,7 +792,7 @@
           left: calc(50% - 630px/2); 
           width: 630px;
           height: 246px;
-          color: black;
+          color: var(--black);
           display: flex;
           text-align: center;
           justify-content: center;
@@ -853,7 +853,7 @@
           left: calc(50% - 630px/2); 
           width: 630px;
           height: 210px;
-          color: black;
+          color: var(--black);
           display: flex;
           text-align: center;
           justify-content: center;
@@ -892,7 +892,7 @@
           left: calc(50% - 710px/2);
           width: 730px;
           height: 350px; 
-          color: black;
+          color: var(--black);
           h3 {
             position: absolute;
             left: 0;
@@ -944,7 +944,7 @@
           height: 300px;
           .sec11_text {
             position: relative;
-            color: black;
+            color: var(--black);
             font-family: 'SUIT';
             font-style: normal;
             font-weight: 600;
@@ -1000,7 +1000,7 @@
 
     // 푸터
     .section12 {
-      background-color: black;
+      background-color: var(--black);
       .sec12_container {
         .background_img {
           img {
