--- a/css/header.css
+++ b/css/header.css
@@ -24,7 +24,11 @@ header {
     align-items: center;
     padding:0 8.07% 0 4.80%;
 }
-
+/* header > h1 > a{
+    display: block;
+    width: 100%;
+    height: 100%;
+} */
 header > nav > button {
     background-color: transparent;
     border: none;
@@ -91,7 +95,7 @@ header > nav > button {
         padding: 85px 5.31% 0 5.31%;
         height:auto;
     }
-    header > h1 > img {
+    header > h1 > a > img {
         width: 279px;
     }
     
