--- a/css/up-button.css
+++ b/css/up-button.css
@@ -32,5 +32,11 @@
         border-radius:0;
         right: 0;
     }
+    #arrow-button-top {
+        width: 100px;
+    }
+    #arrow-button-top path {
+        stroke:var(--white);
+    }
 }
 
