--- a/css/portfolio/portfolio-pc.scss
+++ b/css/portfolio/portfolio-pc.scss
@@ -55,64 +55,39 @@
         }
       }
     }
-    .section .sec3-container {
-      width: 3500px; 
-      .view {
-        margin: 85px 18px 0;
-        width: 267px;
-        height: 375px;
-        .gap {
+    .public-section {
+      .container {
+        width: 3500px; 
+        .view {
+          margin: 85px 18px 0;
           width: 267px;
-          height: 267px;
-        }
-        .content {
-          width: 267px;
-          height: 105px;
-          padding-top: 26px;
-          h2 {
-            font-size: 1rem;
-            line-height: 16px;
+          height: 375px;
+          .gap {
+            width: 267px;
+            height: 267px;
           }
-          h3 {
-            padding-top: 20px;
-            font-size: 1.25rem; //20px
-            line-height: 26px;
+          .content {
+            width: 267px;
+            height: 105px;
+            padding-top: 26px;
+            h2 {
+              font-size: 1rem;
+              line-height: 16px;
+            }
+            h3 {
+              padding-top: 20px;
+              font-size: 1.25rem; //20px
+              line-height: 26px;
+            }
           }
         }
       }
     }
-    .section4 {
-      border-bottom: 1px solid #fff;
-      margin-bottom: 105px;
-      // .sec4-wrap {
-        .sec4-container {
-          width: 3500px; 
-          .view {
-            margin: 85px 18px 0;
-            width: 267px;
-            height: 375px;
-            .gap {
-              width: 267px;
-              height: 267px;
-            }
-            .content {
-              width: 267px;
-              height: 105px;
-              padding-top: 26px;
-              h2 {
-                font-size: 1rem;
-                line-height: 16px;
-              }
-              h3 {
-                padding-top: 20px;
-                font-size: 1.25rem; //20px
-                line-height: 26px;
-              }
-            }
-          }
-        }
-      // }
+
+    .page {
+      margin: 83px auto 200px;
     }
+    
     aside .aside__move-top-button {
       width:74px;
       height:74px;
@@ -127,7 +102,11 @@
       }
     }
     footer {
+      border-top: 1px solid var(--white);
       margin: 0 auto;
+      .footer__title {
+        padding-top: 105px;
+      }
       .footer__copyright {
         font-size: 1.250rem;
       } 
