--- a/css/view-pc.css
+++ b/css/view-pc.css
@@ -1,4 +1,17 @@
 @media (min-width:1200px) {
+  body::before {
+    content: "";
+    position: fixed;
+    left: auto;
+    top: -16%;
+    right: 0;
+    width: 53%;
+    height: 100%;
+    background-image: url(../img/view__background-img.svg);
+    background-size: 100% 100%;
+    pointer-events: none;
+  }
+
   .mo {
     display: none;
   }
