--- a/css/contact-pc.css
+++ b/css/contact-pc.css
@@ -53,7 +53,9 @@
         width: 100%;
     }
     .contact-wrap__form {
-        padding: 0 19.27% 171.92px 19.27%;
+        /* padding: 0 19.27% 171.92px 19.27%; */
+        padding: 0;
+        padding-bottom: 171.92px;
         margin-top: 129px;
     }
     
