Design : index css 수정

--- a/css/index-pc/index-pc.scss
+++ b/css/index-pc/index-pc.scss
@@ -9,112 +9,78 @@
   padding: 0;
 }
 
-#wrap {
-  max-width: 3840px;
-  // min-width: 1920PX;
-  // min-width: 1903px;
-  width: 100%;
-  height: 100%;
-  position: relative;
-  margin: 0 auto;
-
-  .header {
-    z-index: 4;    // z-index를 설정해줘야 다른 섹션에 다 보임
-    position: relative;
-    max-width: 1903px;
+// @media all and (min-width: 1200px) {
+  #wrap {
+    max-width: 3840px;
+    // min-width: 1920PX;
+    // min-width: 1903px;
     width: 100%;
+    height: 100%;
+    position: relative;
     margin: 0 auto;
-    .header_container {
+
+    header {
+      position: absolute;
+      z-index: 2;
+      top:0;
       max-width: 1920px;
       width: 100%;
-      position: fixed;
-      .logo {
-        position: absolute;
-        left: 102px;
-        top: 60px;
-        width: 280px;
-        height: 55px;
-        .logo_btn {
-          img {
-            position: absolute;
-            top: 0;
-            left: 0;
-          }
+      height: auto;
+      background-color: white;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 60px 5.31% 0 5.31%;
+      background-color: transparent;
+      align-items:flex-start;
+      h1 {
+        a {
+            img {
+              width: 279px;
+            }
         }
       }
       nav {
-        .header_menu {
-          position: absolute;
-          top: 70px;
-          right: 112px;
-          line-height: 40px;
-          li {
-            a{
-              font-size: 1.5625rem;   //25px
-              font-weight: 700;
-              color: var(--black);
-              font-family: 'Outfit';
-              font-style: normal;
-              text-align: right;
-            }
+        button {
+          background-color: transparent;
+          border: none;
+          cursor: pointer;
+        }
+        .header__top-menu {
+          position:static;
+          top:0;
+          left:0;
+          background-color: var(--black);
+          position:static;
+          margin-top: 16px;
+          text-align: right;
+          width: 103px;
+          height: 147px;
+          flex-direction: column;
+          justify-content: space-between;
+          background-color: transparent;
+          opacity: 1;
+        }
+        .header__pc-only {
+          display:block;
+        }
+        .header__mobile-only {
+          display: none;
+        }
+        .header__top-menu li {
+          margin-bottom:25px;
+          color: var(--black);
+          a {
+            color: var(--black);
           }
-        } 
-      }
-      // 모바일 메뉴 버튼
-      .mobile_menu_btn {
-        display: none;
-        position: absolute;
-        right: 9%;
-        top: 30px;
-        width: 48px;
-        height: 48px;
-        // margin: auto 5px auto auto;
-
-        .mobile_menu_bar {
-          display: block;
-          width: 22px;
-          height: 17px;
-          position: absolute;
-          right: 6%;
-          top: 0px;
-          overflow: hidden;
-
-          i {
-            position: absolute;
-            left: 0;
-            width: 100%;
-            height: 2px;
-            background-color: var(--black);
-            transition: all .3s;
-            font-weight: 700;
-            &:nth-child(1){
-              top: 0;
-            }
-            &:nth-child(2){
-              bottom: 50%;
-              // margin-top: -1px;
-            }
-            &:nth-child(3){
-              bottom: 0;
-            }
-            // 모바일버튼 눌렀을 때 나타나는 X 닫기버튼
-            &.addMobile:nth-child(1){}
-            &.addMobile:nth-child(2){}
+          &:last-child {
+            margin-bottom:0;
           }
         }
       }
-      // 모바일메뉴 버튼 클릭했을 때 나오는 페이지는 따로 만들었음 menu.scss
-      
-    }
-  }
+        
 
-  // #main {
-  //   z-index: 2;
-  //   position: relative;
-  //   width: 100%;
-  //   height: 100%;     // 메인 전체 높이를 설정하지 않고 100%로 해줘야 스크롤이 생기지 않음
-  //   margin: 0 auto;
-  //   overflow: hidden;    
+    } 
 
     // 모든 섹션에 주는 style
     .section {
@@ -258,21 +224,12 @@
         from {left: -1000px; opacity: 0;}
         to { left: calc(50% - 957px/2 ); opacity: 1;}
       }
-      // 굳이 없어도 되긴함
-      @keyframes disappear {
-        from { left: calc(50% - 957px/2 ); opacity: 1;}
-        to {left: -800px; opacity: 0;}
-      }
       @keyframes slide2 {
         0% {left: 1600px; opacity: 0;}
         50% {opacity: 0.4;}
         100% {left: 0px; opacity: 1;}
       }
       // 굳이 없어도 되긴함
-      @keyframes disappear {
-        from {left: 0; opacity: 1;}
-        to {left: -1600px; opacity: 0;}
-      }
     }
 
     .section2 {
@@ -289,7 +246,7 @@
           text-align: center;
           justify-content: center;
           align-items: center;
-          font-family: 'SUIT';
+          font-family: 'SUIT-Regular';
           font-style: normal;
 
           .h3 {
@@ -457,7 +414,7 @@
                 left: calc(50% - 460px - 40px);
                 width: 460px;
                 height: 115px;
-                font-family: 'SUIT';
+                font-family: 'SUIT-Regular';
                 font-style: normal;
                 font-weight: 500;
                 font-size: 2.8125rem;  //45px
@@ -471,7 +428,7 @@
                 top: 85px;
                 right: 95px;
                 left: calc(50% - 510px/2 + 250px);
-                font-family: 'SUIT';
+                font-family: 'SUIT-Regular';
                 font-style: normal;
                 font-weight: 300;
                 font-size: 1.125rem;  //18px
@@ -599,7 +556,7 @@
               left: 30px;
               left: calc(50% - 423px/2 - 84px);
               bottom: 0;
-              font-family: 'SUIT';
+              font-family: 'SUIT-Regular';
               font-style: normal;
               color: var(--black);
               h5 {
@@ -727,7 +684,7 @@
               position: absolute;
               top: 50px;
               left: calc(50% - 703px/2);  
-              font-family: 'SUIT';
+              font-family: 'SUIT-Regular';
               font-style: normal;
               font-weight: 500;
               font-size: 2rem;    //32px;   
@@ -804,7 +761,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: 'SUIT';
+            font-family: 'SUIT-Regular';
             font-style: normal;
             font-weight: 500;
             font-size: 3.75rem;   //60px;
@@ -863,7 +820,7 @@
             left: 0;
             top: 36%;
             font: inherit;
-            font-family: 'SUIT';
+            font-family: 'SUIT-Regular';
             font-style: normal;
             font-weight: 500;
             font-size: 3.75rem;  //60px
@@ -897,7 +854,7 @@
             position: absolute;
             left: 0;
             top: 38%;  //54px
-            font-family: 'SUIT';
+            font-family: 'SUIT-Regular';
             font-style: normal;
             font-weight: 500;
             font-size: 3.75rem;   //60px
@@ -945,7 +902,7 @@
           .sec11_text {
             position: relative;
             color: var(--black);
-            font-family: 'SUIT';
+            font-family: 'SUIT-Regular';
             font-style: normal;
             font-weight: 600;
             font-size: 5.625rem;  //90px
@@ -1074,7 +1031,7 @@
                 line-height: 38px;
               }
               h4{
-                font-family: 'SUIT';
+                font-family: 'SUIT-Regular';
                 font-weight: 300;
                 font-size: 1.1rem;
                 line-height: 28px;
@@ -1088,14 +1045,14 @@
                 line-height: 38px;
               }
               h4{
-                font-family: 'SUIT';
+                font-family: 'SUIT-Regular';
                 font-weight: 300;
                 font-size: 1.1rem;
                 line-height: 26px;
               }
             }
             .copyright {
-              font-family: 'SUIT';
+              font-family: 'SUIT-Regular';
               font-weight: 300;
               font-size: 1.1rem;
               line-height: 26px;
@@ -1105,22 +1062,22 @@
         }
       }
     }
-  //}
 
-  .top_btn {
-    .top_button {
-      z-index: 5;
-      position: fixed;
-      right: 0;
-      bottom: 0;
-      .pc_image {
-        display: block;
-        width: 74px;
-        height: 74px;
-      }
-      .mo_image {
-        display: none;
+    .top_btn {
+      .top_button {
+        z-index: 5;
+        position: fixed;
+        right: 0;
+        bottom: 0;
+        .pc_image {
+          display: block;
+          width: 74px;
+          height: 74px;
+        }
+        .mo_image {
+          display: none;
+        }
       }
     }
   }
-}
+// }
