--- a/css/index-mo/index-mo.css
+++ b/css/index-mo/index-mo.css
@@ -12,30 +12,57 @@
 }
 
 /* 모바일 375px x 667px  -->  모바일버전 디자인 사이즈 */
-@media all and (max-width: 743px) {
-  #wrap .header .header_container {
-    width: 100%;
-    height: 70px;
+@media all and (max-width: 1200px) {
+  #wrap header {
     position: fixed;
-  }
-  #wrap .header .header_container .logo {
     position: absolute;
-    left: 9%;
-    top: 40%;
-    width: 120px;
-    height: 30px;
+    align-items: flex-start;
+    padding: 24px 8.07% 0 4.8%;
+    height: 60px;
+    display: flex;
   }
-  #wrap .header .header_container .logo .logo_btn img {
-    position: absolute;
-    top: 0;
-    left: 0;
+  #wrap header h1 a img {
     width: 112px;
     height: 20px;
   }
-  #wrap .header .header_container nav .header_menu {
+  #wrap header nav .header__top-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    text-align: right;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 1;
+    transition: opacity 3s;
+  }
+  #wrap header nav .header__top-menu li {
+    margin-bottom: 38px;
+  }
+  #wrap header nav .header__top-menu li a {
+    font-family: Outfit;
+    font-size: 1.563rem;
+    font-weight: 700;
+    /* line-height: 32px; */
+    letter-spacing: 0em;
+  }
+  #wrap header nav .header__top-menu .header__nav-close-button {
+    position: absolute;
+    right: 8.73%;
+    top: 28.01px;
+  }
+  #wrap header nav .header__top-menu .header__nav-close-button button {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+  }
+  #wrap header nav .header__pc-only {
     display: none;
   }
-  #wrap .header .header_container .mobile_menu_btn {
+  #wrap header nav .header__mobile-only {
     display: block;
   }
   #wrap .section {
