--- a/css/index-mo/index-mo.scss
+++ b/css/index-mo/index-mo.scss
@@ -16,39 +16,66 @@
 
 
 /* 모바일 375px x 667px  -->  모바일버전 디자인 사이즈 */
-@media all and (max-width: 743px){
+@media all and (max-width: 1200px){
   #wrap {
-    .header {
-      .header_container {
-        width: 100%;
-        height: 70px;
-        position: fixed;
-        .logo {
-          position: absolute;
-          left: 9%;
-          top: 40%;  //28px
-          width: 120px;
-          height: 30px;
-          .logo_btn {
+    header {
+      position: fixed;
+      position:absolute;
+      align-items:flex-start;
+      padding: 24px 8.07% 0 4.80%;
+      height:60px;
+      display: flex;
+      h1 {
+        a {
             img {
-              position: absolute;
-              top: 0;
-              left: 0;
               width: 112px;
               height: 20px;
             }
+        }
+      }
+      nav {
+        .header__top-menu {
+          position: fixed;
+          top:0;
+          left:0;
+          text-align: right;
+          width: 100%;
+          height: 100vh;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          opacity: 1;   
+          transition: opacity 3s;
+          li {
+            margin-bottom: 38px;
+            a {
+              font-family: Outfit;
+              font-size: 1.563rem;
+              font-weight: 700;
+              /* line-height: 32px; */
+              letter-spacing: 0em;
+            }
+          }
+          .header__nav-close-button {
+            position: absolute;
+            right:8.73%;
+            top:28.01px;
+            button {
+              border: none;
+              background-color: transparent;
+              cursor: pointer;
+            }
           }
         }
-        nav .header_menu {
-          display: none;
+        .header__pc-only {
+          display:none;
         }
-        .mobile_menu_btn {
+        .header__mobile-only {
           display: block;
         }
-
       }
     }
-    // #main {
       .section {
         display: flex;             // 가운데 정렬을 위해
         justify-content: center;  // 가운데 정렬을 위해
@@ -592,7 +619,6 @@
             }
           }
         }
- // }
     }
     .top_btn {
       .top_button {
