--- a/css/index-pc/index-pc.css
+++ b/css/index-pc/index-pc.css
@@ -16,78 +16,59 @@
   position: relative;
   margin: 0 auto;
 }
-#wrap .header {
-  z-index: 4;
-  position: relative;
-  max-width: 1903px;
-  width: 100%;
-  margin: 0 auto;
-}
-#wrap .header .header_container {
+#wrap header {
+  position: absolute;
+  z-index: 2;
+  top: 0;
   max-width: 1920px;
   width: 100%;
-  position: fixed;
+  height: auto;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 60px 5.31% 0 5.31%;
+  background-color: transparent;
+  align-items: flex-start;
 }
-#wrap .header .header_container .logo {
-  position: absolute;
-  left: 102px;
-  top: 60px;
-  width: 280px;
-  height: 55px;
+#wrap header h1 a img {
+  width: 279px;
 }
-#wrap .header .header_container .logo .logo_btn img {
-  position: absolute;
+#wrap header nav button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+#wrap header nav .header__top-menu {
+  position: static;
   top: 0;
   left: 0;
-}
-#wrap .header .header_container nav .header_menu {
-  position: absolute;
-  top: 70px;
-  right: 112px;
-  line-height: 40px;
-}
-#wrap .header .header_container nav .header_menu li a {
-  font-size: 1.5625rem;
-  font-weight: 700;
-  color: var(--black);
-  font-family: "Outfit";
-  font-style: normal;
-  text-align: right;
-}
-#wrap .header .header_container .mobile_menu_btn {
-  display: none;
-  position: absolute;
-  right: 9%;
-  top: 30px;
-  width: 48px;
-  height: 48px;
-}
-#wrap .header .header_container .mobile_menu_btn .mobile_menu_bar {
-  display: block;
-  width: 22px;
-  height: 17px;
-  position: absolute;
-  right: 6%;
-  top: 0px;
-  overflow: hidden;
-}
-#wrap .header .header_container .mobile_menu_btn .mobile_menu_bar i {
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 2px;
   background-color: var(--black);
-  transition: all 0.3s;
-  font-weight: 700;
+  position: static;
+  margin-top: 16px;
+  text-align: right;
+  width: 103px;
+  height: 147px;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: transparent;
+  opacity: 1;
 }
-#wrap .header .header_container .mobile_menu_btn .mobile_menu_bar i:nth-child(1) {
-  top: 0;
+#wrap header nav .header__pc-only {
+  display: block;
 }
-#wrap .header .header_container .mobile_menu_btn .mobile_menu_bar i:nth-child(2) {
-  bottom: 50%;
+#wrap header nav .header__mobile-only {
+  display: none;
 }
-#wrap .header .header_container .mobile_menu_btn .mobile_menu_bar i:nth-child(3) {
-  bottom: 0;
+#wrap header nav .header__top-menu li {
+  margin-bottom: 25px;
+  color: var(--black);
+}
+#wrap header nav .header__top-menu li a {
+  color: var(--black);
+}
+#wrap header nav .header__top-menu li:last-child {
+  margin-bottom: 0;
 }
 #wrap .section {
   visibility: hidden;
@@ -242,16 +223,6 @@
     opacity: 1;
   }
 }
-@keyframes disappear {
-  from {
-    left: calc(50% - 478.5px);
-    opacity: 1;
-  }
-  to {
-    left: -800px;
-    opacity: 0;
-  }
-}
 @keyframes slide2 {
   0% {
     left: 1600px;
@@ -263,16 +234,6 @@
   100% {
     left: 0px;
     opacity: 1;
-  }
-}
-@keyframes disappear {
-  from {
-    left: 0;
-    opacity: 1;
-  }
-  to {
-    left: -1600px;
-    opacity: 0;
   }
 }
 #wrap .section2 .sec2_container {
@@ -289,7 +250,7 @@
   text-align: center;
   justify-content: center;
   align-items: center;
-  font-family: "SUIT";
+  font-family: "SUIT-Regular";
   font-style: normal;
 }
 #wrap .section2 .sec2_container .sec2_content .h3 {
@@ -451,7 +412,7 @@
   left: calc(50% - 460px - 40px);
   width: 460px;
   height: 115px;
-  font-family: "SUIT";
+  font-family: "SUIT-Regular";
   font-style: normal;
   font-weight: 500;
   font-size: 2.8125rem;
@@ -463,7 +424,7 @@
   top: 85px;
   right: 95px;
   left: calc(50% - 255px + 250px);
-  font-family: "SUIT";
+  font-family: "SUIT-Regular";
   font-style: normal;
   font-weight: 300;
   font-size: 1.125rem;
@@ -575,7 +536,7 @@
   left: 30px;
   left: calc(50% - 211.5px - 84px);
   bottom: 0;
-  font-family: "SUIT";
+  font-family: "SUIT-Regular";
   font-style: normal;
   color: var(--black);
 }
@@ -691,7 +652,7 @@
   position: absolute;
   top: 50px;
   left: calc(50% - 351.5px);
-  font-family: "SUIT";
+  font-family: "SUIT-Regular";
   font-style: normal;
   font-weight: 500;
   font-size: 2rem;
@@ -760,7 +721,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "SUIT";
+  font-family: "SUIT-Regular";
   font-style: normal;
   font-weight: 500;
   font-size: 3.75rem;
@@ -816,7 +777,7 @@
   left: 0;
   top: 36%;
   font: inherit;
-  font-family: "SUIT";
+  font-family: "SUIT-Regular";
   font-style: normal;
   font-weight: 500;
   font-size: 3.75rem;
@@ -845,7 +806,7 @@
   position: absolute;
   left: 0;
   top: 38%;
-  font-family: "SUIT";
+  font-family: "SUIT-Regular";
   font-style: normal;
   font-weight: 500;
   font-size: 3.75rem;
@@ -872,7 +833,7 @@
 #wrap .section11 .sec11_container .sec11_content .sec11_text {
   position: relative;
   color: var(--black);
-  font-family: "SUIT";
+  font-family: "SUIT-Regular";
   font-style: normal;
   font-weight: 600;
   font-size: 5.625rem;
@@ -978,7 +939,7 @@
   line-height: 38px;
 }
 #wrap .section12 .sec12_container .sec12_content .bottom .address h4 {
-  font-family: "SUIT";
+  font-family: "SUIT-Regular";
   font-weight: 300;
   font-size: 1.1rem;
   line-height: 28px;
@@ -992,13 +953,13 @@
   line-height: 38px;
 }
 #wrap .section12 .sec12_container .sec12_content .bottom .mail h4 {
-  font-family: "SUIT";
+  font-family: "SUIT-Regular";
   font-weight: 300;
   font-size: 1.1rem;
   line-height: 26px;
 }
 #wrap .section12 .sec12_container .sec12_content .bottom .copyright {
-  font-family: "SUIT";
+  font-family: "SUIT-Regular";
   font-weight: 300;
   font-size: 1.1rem;
   line-height: 26px;
