--- a/css/index-mo.css
+++ b/css/index-mo.css
@@ -16,10 +16,13 @@
   #wrap header {
     position: fixed;
     position: absolute;
-    align-items: flex-start;
-    padding: 24px 8.07% 0 4.8%;
+    width: 100%;
     height: 60px;
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--white);
+    padding: 24px 8.07% 0 4.8%;
   }
   #wrap header h1 a img {
     width: 112px;
@@ -29,9 +32,10 @@
     position: fixed;
     top: 0;
     left: 0;
-    text-align: right;
+    background-color: var(--white);
     width: 100%;
     height: 100vh;
+    text-align: right;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -618,4 +622,4 @@
     width: 48px;
     height: 48px;
   }
-}/*# sourceMappingURL=index-mo.css.map */
+}
