--- a/sass/index-mo.scss
+++ b/sass/index-mo.scss
@@ -18,13 +18,18 @@
 /* 모바일 375px x 667px  -->  모바일버전 디자인 사이즈 */
 @media all and (max-width: 1200px){
   #wrap {
+
+
     header {
       position: fixed;
       position:absolute;
-      align-items:flex-start;
-      padding: 24px 8.07% 0 4.80%;
+      width: 100%;
       height:60px;
       display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background-color: var(--white);
+      padding: 24px 8.07% 0 4.80%;
       h1 {
         a {
             img {
@@ -38,15 +43,17 @@
           position: fixed;
           top:0;
           left:0;
-          text-align: right;
+          background-color: var(--white);
           width: 100%;
           height: 100vh;
+          text-align: right;
           display: flex;
           flex-direction: column;
           justify-content: center;
           align-items: center;
           opacity: 1;   
           transition: opacity 3s;
+          // background-color: transparent; --> 이게 있으면 nav외의 것들이 보여버린다.
           li {
             margin-bottom: 38px;
             a {
@@ -76,6 +83,7 @@
         }
       }
     }
+
       .section {
         display: flex;             // 가운데 정렬을 위해
         justify-content: center;  // 가운데 정렬을 위해
