--- a/sass/index-pc.scss
+++ b/sass/index-pc.scss
@@ -9,29 +9,27 @@
   padding: 0;
 }
 
-// @media all and (min-width: 1200px) {
+// @media all and (min-width: 1201px) {
   #wrap {
     max-width: 3840px;
-    // min-width: 1920PX;
     // min-width: 1903px;
     width: 100%;
     height: 100%;
     position: relative;
     margin: 0 auto;
 
+
     header {
       position: absolute;
       z-index: 2;
       top:0;
-      max-width: 1920px;
       width: 100%;
       height: auto;
-      background-color: white;
+      background-color: var(--white);
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 60px 5.31% 0 5.31%;
-      background-color: transparent;
+      padding: 85px 5.31% 0 5.31%;
       align-items:flex-start;
       h1 {
         a {
@@ -41,6 +39,9 @@
         }
       }
       nav {
+        .header__mobile-only {
+          display: none;
+        }
         button {
           background-color: transparent;
           border: none;
@@ -50,32 +51,31 @@
           position:static;
           top:0;
           left:0;
-          background-color: var(--black);
-          position:static;
           margin-top: 16px;
           text-align: right;
           width: 103px;
           height: 147px;
           flex-direction: column;
           justify-content: space-between;
-          background-color: transparent;
+          background-color: var(--white);
           opacity: 1;
+          li {
+            margin-bottom:25px;
+            color: var(--black);
+            a {
+              font-family: Outfit;
+              font-size: 1.563rem;
+              font-weight: 700;
+              letter-spacing: 0em;
+              color: var(--black);
+            }
+            &:last-child {
+              margin-bottom:0;
+            }
+          }
         }
         .header__pc-only {
           display:block;
-        }
-        .header__mobile-only {
-          display: none;
-        }
-        .header__top-menu li {
-          margin-bottom:25px;
-          color: var(--black);
-          a {
-            color: var(--black);
-          }
-          &:last-child {
-            margin-bottom:0;
-          }
         }
       }
         
