--- a/css/index-pc.css
+++ b/css/index-pc.css
@@ -22,7 +22,6 @@
   top: 0;
   width: 100%;
   height: auto;
-  background-color: var(--white);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -50,7 +49,7 @@
   height: 147px;
   flex-direction: column;
   justify-content: space-between;
-  background-color: var(--white);
+  background-color: transparent;
   opacity: 1;
 }
 #wrap header nav .header__top-menu li {
