--- a/sass/index-pc.scss
+++ b/sass/index-pc.scss
@@ -25,7 +25,6 @@
       top:0;
       width: 100%;
       height: auto;
-      background-color: var(--white);
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -57,7 +56,7 @@
           height: 147px;
           flex-direction: column;
           justify-content: space-between;
-          background-color: var(--white);
+          background-color: transparent;
           opacity: 1;
           li {
             margin-bottom:25px;
